# lemon-os

./: Cargo.toml  build.rs
.cargo/: config.toml
src/kernel/: Cargo.toml
src/kernel/src/: entry.rs  kernel.ld  lib.rs  main.rs  memlayout.rs  param.rs  params.rs  riscv.rs  spinlock.rs  stack.rs  start.rs  uart.rs
src/kernel/src/arch/: riscv.rs
